--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_param.xml
@@ -9,13 +9,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="18px"
+        android:layout_marginTop="12px"
         android:layout_height="wrap_content">
 
         <TextView
         android:id="@+id/textViewInfoText"
         android:layout_width="480px"
-        android:layout_height="wrap_content"
+        android:layout_height="48px"
         android:gravity="center_vertical"
         android:text="@string/jugnoo_cut"
         android:textColor="@color/black_text_v2"
