--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -32,6 +32,7 @@
     <color name="black_translucent_level_2">#55000000</color>
 
     <color name="sliding_bottom_bg_color">#F7F7F7</color>
+    <color name="theme_color">#FD7945</color>
 
     <color name="black_text_grey">#4C4C4C</color>
     <color name="leaderboard_activity_text_color">#9D9D9D</color>
@@ -154,6 +155,7 @@
         <item>@color/transparent</item>
     </integer-array>
 
+    <color name="stroke_color_light">#CDCDCD</color>
 
     <color name="text_color">#2F221B</color>
     <color name="text_color_light">#992F221B</color>
