--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_below="@+id/topRlOuter"
     android:splitMotionEvents="false"
-    android:visibility="gone">
+    android:visibility="visible">
 
     <!-- customer info layout -->
     <RelativeLayout
@@ -198,7 +198,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15px"
             android:splitMotionEvents="false"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                 android:id="@+id/driverStartRideBtn"
@@ -242,7 +242,7 @@
             android:gravity="bottom"
             android:orientation="vertical"
             android:splitMotionEvents="false"
-            android:visibility="visible"
+            android:visibility="gone"
             >
 
             <ImageView
@@ -282,7 +282,7 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
                     android:splitMotionEvents="false"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     >
 
                     <RelativeLayout
