feature_alarm_to_start_ride: UI changes and second alarm added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -140,7 +140,7 @@
             android:layout_below="@+id/topRlOuter"
             android:divider="@color/transparent"
             android:splitMotionEvents="false"
-            android:visibility="visible"
+            android:visibility="gone"
             />
 
         <ImageView
