--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_slidebar_tab.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_slidebar_tab.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="8px"
         android:id="@+id/topRlOuterSlide"
-        android:background="@drawable/shadow_up"
+        android:background="@drawable/transparent"
         android:layout_marginLeft="11px"
         android:layout_marginRight="11px"
         android:layout_marginTop="8px"
@@ -58,6 +58,7 @@
                 android:layout_marginTop="7px"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="36px"
+                android:visibility="gone"
                 android:src="@drawable/arrow_thick_new"/>
 
         </RelativeLayout>
@@ -155,7 +156,8 @@
                     android:layout_below="@+id/textViewValue"
                     android:layout_centerHorizontal="true"
                     android:text="fulfillment"
-                    android:textColor="@color/red_v2"
+                    android:visibility="gone"
+                    android:textColor="@color/white"
                     android:textSize="24px"/>
 
             </RelativeLayout>
