--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -147,7 +147,7 @@
     <color name="white_60">#9AFFFFFF</color>
     <color name="white_40">#66FFFFFF</color>
     <color name="white_20">#33FFFFFF</color>
-
+    <color name="grey_alpha_66">#66666666</color>
 
     <integer-array name="gplus_colors">
         <item>@color/yellow_jugnoo</item>
