--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
@@ -61,7 +61,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="48px"
+                android:layout_height="54px"
                 android:layout_marginTop="32px"
                 android:gravity="center">
 
@@ -70,6 +70,7 @@
                     android:layout_height="2px"
                     android:id="@+id/imageViewHorizontal3"
                     android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
                     android:background="@color/grey_light"/>
 
                 <TextView
@@ -79,8 +80,8 @@
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
                     android:background="@color/white"
-                    android:padding="10px"
-                    android:gravity="center"
+                    android:paddingLeft="10px"
+                    android:paddingRight="10px"
                     android:text="@string/NA"
                     android:textColor="@color/black_text_v2"
                     android:textSize="30px"/>
@@ -123,26 +124,26 @@
                 >
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                    android:id="@+id/btnOk"
+                    android:id="@+id/btnCancel"
                     android:layout_width="220px"
                     android:layout_height="83px"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="280px"
-                    android:background="@drawable/new_orange_btn_selector_rounded"
-                    android:text="@string/ok"
+                    android:background="@drawable/new_menu_black_btn_selector_rounded"
+                    android:text="@string/cancel"
                     android:textColor="@drawable/white_color_selector"
                     android:textSize="@dimen/button_text_size"
                     />
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                    android:id="@+id/btnCancel"
+                    android:id="@+id/btnOk"
                     android:layout_width="220px"
                     android:layout_height="83px"
                     android:layout_marginLeft="28px"
                     android:padding="2px"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/new_menu_black_btn_selector_rounded"
-                    android:text="@string/cancel"
+                    android:background="@drawable/new_orange_btn_selector_rounded"
+                    android:text="@string/ok"
                     android:textColor="@drawable/white_color_selector"
                     android:textSize="@dimen/button_text_size"
                     />
