--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -204,6 +204,7 @@
         android:id="@+id/linearLayoutStartEnd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/transparent"
         android:layout_alignParentBottom="true"
         android:gravity="bottom"
         android:orientation="vertical"
@@ -272,6 +273,7 @@
             android:id="@+id/driverInRideMainRl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/transparent"
             android:gravity="bottom"
             android:orientation="vertical"
             android:splitMotionEvents="false"
