--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -105,6 +105,7 @@
     <color name="black_text_v2">#595968</color>
     <color name="black_text_alpha">#99242424</color>
     <color name="grey_light_info_v2">#f0f0f0</color>
+    <color name="grey_light_delivery_tab_fill">#f6f6f6</color>
     <color name="grey_light_more">#BBBBBB</color>
     <color name="grey_light">#DDDDDD</color>
     <color name="grey_light_op_60">#60DDDDDD</color>
