--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery_return.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery_return.xml
@@ -38,7 +38,7 @@
                 android:paddingLeft="20px"
                 android:paddingRight="20px"
                 android:text="@string/id"
-                android:textColor="@color/text_color"
+                android:textColor="@color/black_text_v2"
                 android:textSize="24px"
                 android:layout_marginTop="40px"/>
 
@@ -113,7 +113,7 @@
                         android:singleLine="true"
                         android:text="@string/total"
                         android:paddingBottom="4px"
-                        android:textColor="@color/bg_grey_opaque"
+                        android:textColor="@color/black_text_v2"
                         android:textSize="@dimen/end_ride_details_text_size"
                         android:layout_marginTop="35px"
 
@@ -126,7 +126,7 @@
                         android:layout_centerHorizontal="true"
                         android:gravity="center"
                         android:text="@string/NA"
-                        android:textColor="@color/bg_grey_opaque"
+                        android:textColor="@color/black_text_v2"
                         android:textSize="@dimen/end_ride_details_text_size"
                         android:layout_alignParentBottom="true"
                         android:layout_marginBottom="35px"
@@ -156,7 +156,7 @@
                         android:gravity="center"
                         android:text="@string/delivered"
                         android:paddingBottom="4px"
-                        android:textColor="@color/bg_grey_opaque"
+                        android:textColor="@color/black_text_v2"
                         android:textSize="@dimen/end_ride_details_text_size"
                         android:layout_marginTop="35px"/>
 
@@ -167,7 +167,7 @@
                         android:layout_centerHorizontal="true"
                         android:gravity="center"
                         android:text=""
-                        android:textColor="@color/bg_grey_opaque"
+                        android:textColor="@color/black_text_v2"
                         android:textSize="@dimen/end_ride_details_text_size"
                         android:layout_alignParentBottom="true"
                         android:layout_marginBottom="35px"
@@ -198,7 +198,7 @@
                         android:gravity="center"
                         android:paddingBottom="4px"
                         android:text="@string/failed"
-                        android:textColor="@color/bg_grey_opaque"
+                        android:textColor="@color/black_text_v2"
                         android:textSize="@dimen/end_ride_details_text_size"
                         android:layout_marginTop="35px"
                         />
@@ -210,7 +210,7 @@
                         android:layout_centerHorizontal="true"
                         android:gravity="center"
                         android:text="@string/NA"
-                        android:textColor="@color/bg_grey_opaque"
+                        android:textColor="@color/black_text_v2"
                         android:textSize="@dimen/end_ride_details_text_size"
                         android:layout_alignParentBottom="true"
                         android:layout_marginBottom="35px"/>
