--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_return_reasons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_return_reasons.xml
@@ -3,14 +3,15 @@
     android:id="@+id/relative"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="720px"
-    android:layout_height="64px"
+    android:layout_height="wrap_content"
     >
 
     <TextView
         android:id="@+id/textViewReturnOption"
         android:layout_width="580px"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:gravity="center_vertical"
+        android:padding="15px"
         android:layout_marginLeft="20px"
         android:text="Driver is late"
         android:textColor="@color/text_color"
