--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
@@ -117,10 +117,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="40px"
-                android:layout_marginLeft="15px"
-                android:layout_marginRight="15px"
+                android:layout_marginLeft="40px"
+                android:layout_marginRight="40px"
                 android:layout_marginBottom="25px"
-                android:layout_gravity="center"
                 android:splitMotionEvents="false"
                 >
 
@@ -128,8 +127,6 @@
                     android:id="@+id/btnCancel"
                     android:layout_width="220px"
                     android:layout_height="83px"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="280px"
                     android:background="@drawable/new_menu_black_btn_selector_rounded"
                     android:text="@string/cancel"
                     android:textColor="@drawable/white_color_selector"
@@ -140,13 +137,11 @@
                     android:id="@+id/btnOk"
                     android:layout_width="220px"
                     android:layout_height="83px"
-                    android:layout_marginLeft="28px"
-                    android:padding="2px"
-                    android:layout_gravity="center_horizontal"
                     android:background="@drawable/new_orange_btn_selector_rounded"
                     android:text="@string/ok"
                     android:textColor="@drawable/white_color_selector"
                     android:textSize="@dimen/button_text_size"
+                    android:layout_alignParentRight="true"
                     />
             </RelativeLayout>
 
