--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
@@ -53,7 +53,7 @@
                 android:layout_alignParentRight="true"
                 android:text="@string/NA"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="28px"
+                android:layout_marginRight="30px"
                 android:textSize="28px"
                 android:textColor="@color/black_text_v2"/>
 
@@ -100,7 +100,7 @@
                 android:id="@+id/relativeLayoutCall"
                 android:layout_width="200px"
                 android:layout_height="64px"
-                android:layout_marginLeft="28px"
+                android:layout_marginLeft="25px"
                 android:layout_marginTop="15px"
                 android:visibility="visible"
                 android:background="@drawable/new_orange_btn_corner_normal">
@@ -188,11 +188,13 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginLeft="30px"
+            android:layout_marginRight="30px"
+            >
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                 android:id="@+id/buttonMarkDeliver"
@@ -211,6 +213,7 @@
                 android:background="@drawable/new_orange_btn_normal_rounded"
                 android:text="@string/returned"
                 android:visibility="gone"
+                android:layout_centerInParent="true"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"/>
 
@@ -219,14 +222,13 @@
                 android:layout_width="270px"
                 android:layout_height="64px"
                 android:layout_alignParentRight="true"
-                android:layout_marginLeft="40px"
                 android:visibility="visible"
                 android:background="@drawable/new_menu_black_btn_selector_rounded"
                 android:text="@string/failed"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="32px"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
