--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
@@ -127,7 +127,7 @@
             <RelativeLayout
                 android:id="@+id/relativeLayoutDeliveredAmnt"
                 android:layout_width="235px"
-                android:layout_height="64px"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20px"
                 android:layout_marginTop="15px"
                 android:visibility="gone"
@@ -158,7 +158,7 @@
             <RelativeLayout
                 android:id="@+id/relativeLayoutTotalCashCollected"
                 android:layout_width="235px"
-                android:layout_height="64px"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20px"
                 android:visibility="gone"
                 android:layout_marginTop="15px"
@@ -188,12 +188,13 @@
 
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="30px"
             android:layout_marginRight="30px"
+            android:gravity="center"
             >
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
@@ -221,14 +222,14 @@
                 android:id="@+id/buttonMarkFailed"
                 android:layout_width="270px"
                 android:layout_height="64px"
-                android:layout_alignParentRight="true"
+                android:layout_marginLeft="35px"
                 android:visibility="visible"
                 android:background="@drawable/new_menu_black_btn_selector_rounded"
-                android:text="@string/failed"
+                android:text="@string/fail"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="32px"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
