--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout android:id="@+id/rv"
              xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="640px"
+             android:layout_width="match_parent"
              android:layout_height="1134px"
              android:orientation="vertical"
              android:layout_gravity="center"
@@ -95,7 +95,7 @@
                 android:textSize="24px"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:layout_marginTop="32px"
+                android:layout_marginTop="28px"
                 android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
                 android:textColor="@color/black_text_v2"
                 />
@@ -117,16 +117,16 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="40px"
-                android:layout_marginLeft="40px"
-                android:layout_marginRight="40px"
+                android:layout_marginLeft="44px"
+                android:layout_marginRight="44px"
                 android:layout_marginBottom="25px"
                 android:splitMotionEvents="false"
                 >
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnCancel"
-                    android:layout_width="220px"
-                    android:layout_height="83px"
+                    android:layout_width="260px"
+                    android:layout_height="70px"
                     android:background="@drawable/new_menu_black_btn_selector_rounded"
                     android:text="@string/cancel"
                     android:textColor="@drawable/white_color_selector"
@@ -135,8 +135,8 @@
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnOk"
-                    android:layout_width="220px"
-                    android:layout_height="83px"
+                    android:layout_width="260px"
+                    android:layout_height="70px"
                     android:background="@drawable/new_orange_btn_selector_rounded"
                     android:text="@string/ok"
                     android:textColor="@drawable/white_color_selector"
