--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
@@ -6,22 +6,123 @@
     android:layout_height="wrap_content"
     android:splitMotionEvents="false">
 
-    <LinearLayout
+
+    <RelativeLayout
+        android:id="@+id/topBar"
+        android:layout_width="match_parent"
+        android:layout_height="95px"
+        android:background="@color/black_top_bar_bg">
+
+
+        <Button
+            android:id="@+id/menuBtn"
+            android:layout_width="82px"
+            android:layout_height="82px"
+            android:layout_centerVertical="true"
+            android:background="@drawable/menu_btn_selector"
+            android:tag="mwar"/>
+
+        <TextView
+            android:id="@+id/temptext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="@string/JUGNOO"
+            android:textColor="@color/white"
+            android:textSize="48px"/>
+
+        <Button
+            android:id="@+id/checkServerBtn"
+            android:layout_width="82px"
+            android:layout_height="82px"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/transparent"
+            android:longClickable="true"/>
+
+
+        <LinearLayout
+            android:id="@+id/linearLayout_DEI"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="100px"
+            android:layout_marginTop="19px"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            >
+
+            <ImageView
+                android:id="@+id/imageViewTitleBarDEI"
+                android:layout_width="60px"
+                android:layout_height="60px"
+                android:layout_marginRight="7px"
+                android:src="@drawable/top_bar_star_icon"
+                android:tag="mwar"
+                />
+
+            <TextView
+                android:id="@+id/textViewTitleBarDEI"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10px"
+                android:gravity="center"
+                android:text="4.5"
+                android:textColor="@color/white"
+                android:textSize="44px"/>
+
+        </LinearLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/RelativeLayoutNotificationCenter"
+            android:layout_width="90px"
+            android:layout_height="80px"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15px"
+            android:layout_marginTop="9px"
+            android:gravity="center_vertical"
+            >
+
+
+            <ImageView
+                android:id="@+id/imageViewNotification"
+                android:layout_width="59px"
+                android:layout_height="57px"
+                android:layout_centerInParent="true"
+                android:padding="10px"
+                android:src="@drawable/notification_icon"
+                android:tag="mwar"
+                />
+
+            <TextView
+                android:id="@+id/textViewNotificationValue"
+                android:layout_width="32px"
+                android:layout_height="35px"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/ic_notification_unread"
+                android:gravity="center_horizontal"
+                android:paddingTop="2px"
+                android:tag="mwar"
+                android:text="0"
+                android:textColor="@color/white"
+                android:textSize="20px"
+                />
+
+
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/relativeLayoutRefreshUSL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/topBar"
         android:orientation="vertical"
-        android:animateLayoutChanges="true"
         >
-
-
-        <View
-            android:id="@+id/viewRefreshUSLBar"
-            android:layout_width="match_parent"
-            android:layout_height="90px"
-            android:visibility="gone"
-            />
-
         <RelativeLayout
             android:id="@+id/relativeLayoutRefreshUSLBar"
             android:layout_width="match_parent"
@@ -32,10 +133,10 @@
                 android:id="@+id/textViewCancellationMessage"
                 android:layout_width="400px"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginLeft="60px"
                 android:text="@string/connection_lost"
                 android:textColor="@color/white"
-                android:layout_centerVertical="true"
                 android:textSize="28px"/>
 
             <TextView
@@ -43,8 +144,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="72px"
                 android:layout_centerVertical="true"
+                android:layout_marginRight="72px"
                 android:text="@string/retry"
                 android:textColor="@color/yellow_jugnoo"
                 android:textSize="32px"/>
@@ -53,121 +154,28 @@
                 android:id="@+id/progressBarUSL"
                 android:layout_width="50px"
                 android:layout_height="50px"
-                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="82px"
                 />
 
         </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/relativeLayoutBatteryLow"
+            android:layout_width="match_parent"
+            android:layout_height="95px"
+            android:background="@color/black_text_v2"
+            android:visibility="gone">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/textViewBatteryLow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/battery_low"
+                android:textColor="@color/white"
+                android:textSize="28px"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="95px"
-        android:background="@color/black_top_bar_bg">
-
-
-    <Button
-        android:id="@+id/menuBtn"
-        android:layout_width="82px"
-        android:layout_height="82px"
-        android:layout_centerVertical="true"
-        android:background="@drawable/menu_btn_selector"
-        android:tag="mwar"/>
-
-    <TextView
-        android:id="@+id/temptext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:gravity="center"
-        android:text="@string/JUGNOO"
-        android:textColor="@color/white"
-        android:textSize="48px"/>
-
-    <Button
-        android:id="@+id/checkServerBtn"
-        android:layout_width="82px"
-        android:layout_height="82px"
-        android:layout_centerInParent="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/transparent"
-        android:longClickable="true"/>
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout_DEI"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="100px"
-        android:layout_marginTop="19px"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:visibility="gone"
-        >
-
-        <ImageView
-            android:id="@+id/imageViewTitleBarDEI"
-            android:layout_width="60px"
-            android:layout_height="60px"
-            android:layout_marginRight="7px"
-            android:src="@drawable/top_bar_star_icon"
-            android:tag="mwar"
-            />
-
-        <TextView
-            android:id="@+id/textViewTitleBarDEI"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10px"
-            android:gravity="center"
-            android:text="4.5"
-            android:textColor="@color/white"
-            android:textSize="44px"/>
-
-    </LinearLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/RelativeLayoutNotificationCenter"
-        android:layout_width="90px"
-        android:layout_height="80px"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="9px"
-        android:layout_marginRight="15px"
-        android:gravity="center_vertical"
-        >
-
-
-        <ImageView
-            android:id="@+id/imageViewNotification"
-            android:layout_width="59px"
-            android:layout_height="57px"
-            android:layout_centerInParent="true"
-            android:padding="10px"
-            android:src="@drawable/notification_icon"
-            android:tag="mwar"
-            />
-
-        <TextView
-            android:id="@+id/textViewNotificationValue"
-            android:layout_width="32px"
-            android:layout_height="35px"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/ic_notification_unread"
-            android:gravity="center_horizontal"
-            android:paddingTop="2px"
-            android:tag="mwar"
-            android:text="0"
-            android:textColor="@color/white"
-            android:textSize="20px"
-            />
-
-
+        </RelativeLayout>
     </RelativeLayout>
-    </RelativeLayout>
-
 </RelativeLayout>
