--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -89,93 +89,159 @@
 
         <LinearLayout
             android:id="@+id/etLayout"
-            android:layout_width="648px"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/jugnooLogoBig"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="72px"
             android:background="@drawable/transparent"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:splitMotionEvents="false">
 
             <LinearLayout
-                android:layout_width="640px"
-                android:layout_height="82px"
-                android:background="@drawable/background_white_rounded_orange_bordered"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:padding="2px">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white_light_dark"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="visible">
 
-                <ImageView
-                    android:layout_width="58px"
-                    android:layout_height="64px"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="6px"
-                    android:background="@drawable/phone_icon"/>
-
-                <ImageView
-                    android:layout_width="2px"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="6px"
-                    android:background="@color/new_orange"/>
-
-                <AutoCompleteTextView
-                    android:id="@+id/phoneNoEt"
+                <LinearLayout
+                    android:id="@+id/linearLayoutTopDefault"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="2px"
-                    android:layout_marginLeft="10px"
-                    android:layout_marginRight="2px"
-                    android:layout_marginTop="2px"
-                    android:background="@drawable/background_white"
-                    android:hint="@string/phone_number"
-                    android:inputType="number"
-                    android:maxLength="13"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="34px"/>
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <!--<ImageView-->
+                        <!--android:id="@+id/imageViewWalletIcon"-->
+                        <!--android:layout_marginTop="30px"-->
+                        <!--android:visibility="gone"-->
+                        <!--android:src="@drawable/ic_paytm_big"-->
+                        <!--style="@style/payment_option_icon_big_dimen"-->
+                        <!--/>-->
+
+                    <TextView
+                        android:id="@+id/otpHelpText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="30px"
+                        android:text="@string/nl_otp_please_enter_otp"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_32" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="20px"
+                        android:layout_marginBottom="20px"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:visibility="visible">
+
+
+                        <TextView
+                            android:id="@+id/textViewOtpNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="iiii"
+                            android:textColor="@color/black_text_v2"
+                            android:textSize="@dimen/text_size_32" />
+
+                        <ImageView
+                            android:id="@+id/imageViewSep"
+                            android:layout_width="2px"
+                            android:layout_height="35px"
+                            android:layout_marginLeft="10px"
+                            android:background="@color/stroke_color_light" />
+
+                        <ImageView
+                            android:id="@+id/imageViewChangePhoneNumber"
+                            android:layout_width="58px"
+                            android:layout_height="58px"
+                            android:padding="15px"
+                            android:src="@drawable/ic_otp_edit_number_selector"
+                            android:tag="mwar"
+                            android:visibility="visible" />
+
+
+                    </LinearLayout>
+                </LinearLayout>
 
             </LinearLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2px"
+                android:background="@color/stroke_color_light" />
 
             <LinearLayout
                 android:id="@+id/otpETextLLayout"
-                android:layout_width="640px"
-                android:layout_height="82px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="72px"
-                android:background="@drawable/background_grey_rounded_orange_bordered"
-                android:orientation="horizontal"
-
+                android:orientation="vertical"
                 android:padding="2px">
 
-                <ImageView
-                    android:layout_width="58px"
-                    android:layout_height="64px"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="6px"
-                    android:background="@drawable/otp_icon"/>
-
-                <ImageView
-                    android:layout_width="2px"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="6px"
-                    android:background="@color/new_orange"/>
 
                 <EditText
                     android:id="@+id/otpEt"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="2px"
-                    android:layout_marginLeft="10px"
-                    android:layout_marginRight="2px"
-                    android:layout_marginTop="2px"
-                    android:background="@color/transparent"
-                    android:hint="@string/otp"
+                    android:layout_width="410px"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:background="#0000"
+                    android:gravity="center"
+                    android:hint="@string/enter_otp"
                     android:inputType="number"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="34px"/>
+                    android:paddingLeft="20px"
+                    android:paddingRight="20px"
+                    android:textColor="@color/black_text_v2"
+                    android:textColorHint="@color/grey_light"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/text_size_32"
+                    android:paddingTop="15px"
+                    android:paddingBottom="15px"/>
+
+                <ImageView
+                    android:layout_width="410px"
+                    android:layout_height="3px"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@color/red_v2" />
+
+                <LinearLayout
+                    android:id="@+id/btnReGenerateOtp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="12px"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textViewbtnReGenerateOtp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layout_gravity="center_horizontal"
+                        android:text="@string/resend_OTP"
+                        android:textColor="@color/new_orange"
+                        android:textSize="26px"
+                        android:visibility="visible"/>
+
+                    <ImageView
+                        android:id="@+id/imgBtnReGenerateOtp"
+                        android:layout_width="148px"
+                        android:layout_height="2px"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@color/red_v2"
+                        android:textColor="@drawable/white_color_selector"
+                        android:visibility="visible"/>
+
+                </LinearLayout>
+
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -241,111 +307,108 @@
             android:text="@string/GENERATE_OTP"
             android:textColor="@drawable/white_color_selector"
             android:textSize="@dimen/button_text_size"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
 
         <Button
             android:id="@+id/loginViaOtp"
-            android:layout_width="648px"
+            android:layout_width="404px"
             android:layout_height="90px"
             android:layout_marginTop="48px"
             android:background="@drawable/orange_btn_selector"
-            android:text="@string/verify_me"
+            android:text="@string/submit"
             android:textColor="@drawable/white_color_selector"
             android:textSize="@dimen/button_text_size"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
         <LinearLayout
             android:id="@+id/layoutResendOtp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="72px"
+            android:layout_marginTop="52px"
             android:gravity="center_horizontal"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:splitMotionEvents="false"
             android:visibility="gone">
-
-            <LinearLayout
-                android:id="@+id/btnReGenerateOtp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="104px"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imgBtnReGenerateOtp"
-                    android:layout_width="90px"
-                    android:layout_height="90px"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@drawable/resend_otp"
-                    android:text="@string/resend_OTP"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
-                    android:visibility="visible"/>
-
-                <TextView
-                    android:id="@+id/textViewbtnReGenerateOtp"
-                    android:layout_width="175px"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/resend_OTP"
-                    android:textColor="@color/new_orange"
-                    android:textSize="32px"
-                    android:visibility="visible"/>
-
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/textViewOr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="center"
                 android:text="@string/or"
                 android:textSize="32px"/>
 
-
             <LinearLayout
                 android:id="@+id/btnOtpViaCall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="104px"
-                android:orientation="vertical">
+                android:layout_width="404px"
+                android:layout_height="@dimen/button_height"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="25px"
+                android:background="@drawable/background_white_rounded_orange_bordered"
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imgBtnOtpViaCall"
-                    android:layout_width="90px"
-                    android:layout_height="90px"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@drawable/miss_call_icon"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
-                    android:visibility="visible"/>
+                    android:layout_width="35px"
+                    android:layout_height="26px"
+                    android:layout_marginRight="16px"
+                    android:src="@drawable/miss_call_icon"
+                    android:tag="mwar" />
 
                 <TextView
-                    android:id="@+id/textViewBtnOtpViaCall"
-                    android:layout_width="180px"
+                    android:id="@+id/textViewGiveAMissedCall"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/give_misscall_to_verify"
-                    android:textColor="@color/new_orange"
-                    android:textSize="30px"
-                    android:visibility="visible"/>
-
+                    android:text="@string/miss_call_otp"
+                    android:textAllCaps="true"
+                    android:textColor="@color/red_v2"
+                    android:textSize="@dimen/text_size_30" />
             </LinearLayout>
+
+
+            <!--<LinearLayout-->
+                <!--android:id="@+id/btnOtpViaCall"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="104px"-->
+                <!--android:orientation="vertical">-->
+
+                <!--<ImageView-->
+                    <!--android:id="@+id/imgBtnOtpViaCall"-->
+                    <!--android:layout_width="90px"-->
+                    <!--android:layout_height="90px"-->
+                    <!--android:layout_gravity="center_horizontal"-->
+                    <!--android:background="@drawable/miss_call_icon"-->
+                    <!--android:textColor="@drawable/white_color_selector"-->
+                    <!--android:textSize="@dimen/button_text_size"-->
+                    <!--android:visibility="visible"/>-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/textViewBtnOtpViaCall"-->
+                    <!--android:layout_width="180px"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:gravity="center"-->
+                    <!--android:text="@string/give_misscall_to_verify"-->
+                    <!--android:textColor="@color/new_orange"-->
+                    <!--android:textSize="30px"-->
+                    <!--android:visibility="visible"/>-->
+
+            <!--</LinearLayout>-->
 
 
         </LinearLayout>
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_width="648px"
+            android:layout_width="404px"
             android:layout_height="90px"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="28px"
             android:layout_marginTop="84px"
-            android:background="@drawable/orange_btn_selector"
+            android:background="@drawable/background_white_rounded_orange_bordered"
             android:text="@string/login"
-            android:textColor="@drawable/white_color_selector"
+            android:textColor="@color/red_v2"
             android:textSize="@dimen/button_text_size"
             android:visibility="gone"/>
 
