--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -4,54 +4,68 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="720px"
     android:layout_height="1134px"
+    android:animateLayoutChanges="true"
     android:background="@drawable/splash_new_background"
     android:orientation="vertical"
-    android:splitMotionEvents="false"
-    android:animateLayoutChanges="true"
-    >
+    android:splitMotionEvents="false">
 
     <RelativeLayout
-        android:id="@+id/selectLanguageLl"
-        android:layout_width="320px"
-        android:layout_height="80px"
-        android:layout_marginLeft="360px"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="5px"
-        android:layout_marginTop="25px"
-        android:background="@drawable/background_translucent_white_rounded_orange_bordered"
-        android:visibility="visible">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="6px"
-            android:visibility="gone"
-            android:background="@drawable/language_icon"/>
-
-        <ImageView
-            android:layout_width="2px"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="6px"
-            android:visibility="gone"
-            android:background="@color/new_orange"/>
-
-        <Spinner
-            android:id="@+id/language_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <Button
+            android:id="@+id/backBtn"
+            android:layout_width="80px"
+            android:layout_height="80px"
             android:layout_centerVertical="true"
-            android:background="@color/transparent"
-            android:popupBackground="@drawable/background_white_rounded_orange_bordered"
-            android:textAlignment="center"/>
+            android:background="@drawable/back_btn_selector"
+            android:textColor="@drawable/blue_alpha_color_selector"
+            android:textSize="@dimen/button_text_size"/>
 
-        <ImageView
-            android:layout_width="30px"
-            android:layout_height="22px"
-            android:layout_marginRight="15px"
-            android:layout_centerVertical="true"
+        <RelativeLayout
+            android:id="@+id/selectLanguageLl"
+            android:layout_width="320px"
+            android:layout_height="80px"
             android:layout_alignParentRight="true"
-            android:background="@drawable/white_arrow_down"/>
+            android:layout_marginLeft="360px"
+            android:layout_marginRight="5px"
+            android:layout_marginTop="25px"
+            android:background="@drawable/background_translucent_white_rounded_orange_bordered"
+            android:visibility="visible">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="6px"
+                android:background="@drawable/language_icon"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:layout_width="2px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="6px"
+                android:background="@color/new_orange"
+                android:visibility="gone"/>
+
+            <Spinner
+                android:id="@+id/language_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:background="@color/transparent"
+                android:popupBackground="@drawable/background_white_rounded_orange_bordered"
+                android:textAlignment="center"/>
+
+            <ImageView
+                android:layout_width="30px"
+                android:layout_height="22px"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="15px"
+                android:background="@drawable/white_arrow_down"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
@@ -59,13 +73,13 @@
         android:id="@+id/viewInitJugnoo"
         android:layout_width="match_parent"
         android:layout_height="140px"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/viewInitSplashJugnoo"
         android:layout_width="match_parent"
         android:layout_height="200px"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 
     <RelativeLayout
@@ -82,7 +96,7 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/jugnoo_white_logo"
             android:tag="mwar"
-            android:visibility="visible" />
+            android:visibility="visible"/>
 
         <RelativeLayout
             android:id="@+id/jugnooTextImgRl"
@@ -108,12 +122,12 @@
         </RelativeLayout>
 
         <!--<ProgressBar-->
-            <!--android:id="@+id/progressBar1"-->
-            <!--android:layout_width="100px"-->
-            <!--android:layout_height="100px"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_marginTop="760px"-->
-            <!--/>-->
+        <!--android:id="@+id/progressBar1"-->
+        <!--android:layout_width="100px"-->
+        <!--android:layout_height="100px"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="760px"-->
+        <!--/>-->
 
     </RelativeLayout>
 
@@ -122,14 +136,14 @@
         android:id="@+id/viewInitLS"
         android:layout_width="match_parent"
         android:layout_height="300px"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 
     <RelativeLayout
         android:id="@+id/relativeLayoutLS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="210px"
+        android:layout_marginTop="144px"
         android:animateLayoutChanges="true"
         android:visibility="visible">
 
@@ -143,28 +157,43 @@
             android:splitMotionEvents="false"
             android:visibility="visible">
 
+
+            <TextView
+                android:id="@+id/textViewDriver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/imageViewHorizontal3"
+                android:paddingLeft="10px"
+                android:paddingRight="10px"
+                android:text="@string/driver"
+                android:textColor="@color/white"
+                android:textSize="30px"/>
+
             <Button
                 android:id="@+id/buttonLogin"
                 android:layout_width="473px"
                 android:layout_height="100px"
+                android:layout_marginTop="32px"
                 android:background="@drawable/button_white_selector"
                 android:text="@string/login"
                 android:textAllCaps="true"
                 android:textColor="@color/red_v2"
-                android:textSize="@dimen/text_size_34" />
+                android:textSize="@dimen/text_size_34"/>
 
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="54px"
-                android:layout_marginTop="32px"
                 android:layout_marginBottom="32px"
+                android:layout_marginTop="32px"
                 android:gravity="center">
 
                 <ImageView
+                    android:id="@+id/imageViewHorizontal3"
                     android:layout_width="200px"
                     android:layout_height="2px"
-                    android:id="@+id/imageViewHorizontal3"
                     android:layout_centerVertical="true"
                     android:background="@color/grey_light"/>
 
@@ -172,8 +201,8 @@
                     android:id="@+id/textViewName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/imageViewHorizontal3"
                     android:paddingLeft="10px"
                     android:paddingRight="10px"
@@ -182,15 +211,14 @@
                     android:textSize="30px"/>
 
                 <ImageView
+                    android:id="@+id/imageViewHorizontal4"
                     android:layout_width="200px"
                     android:layout_height="2px"
-                    android:id="@+id/imageViewHorizontal4"
-                    android:layout_toRightOf="@+id/textViewName"
                     android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/textViewName"
                     android:background="@color/grey_light"/>
 
             </RelativeLayout>
-
 
 
             <Button
@@ -201,16 +229,16 @@
                 android:text="@string/register"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_size_34" />
+                android:textSize="@dimen/text_size_34"/>
 
             <Button
                 android:id="@+id/buttonRegisterTookan"
-                android:text="@string/register_via_agent"
-                android:textColor="@color/white"
                 android:layout_width="473px"
                 android:layout_height="100px"
-                android:background="@drawable/button_theme_alpha_white_stroke_selector"
                 android:layout_marginTop="24px"
+                android:background="@drawable/button_theme_alpha_white_stroke_selector"
+                android:text="@string/register_via_agent"
+                android:textColor="@color/white"
                 android:textSize="@dimen/text_size_34"
                 android:visibility="gone"
                 />
@@ -222,7 +250,7 @@
                 android:layout_marginTop="60px"
                 android:text=""
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_size_26" />
+                android:textSize="@dimen/text_size_26"/>
 
         </LinearLayout>
 
@@ -231,9 +259,9 @@
 
 
     <!-- login buttons -->
-    <include layout="@layout/layout_login" />
+    <include layout="@layout/layout_login"/>
 
 
-    <include layout="@layout/layout_splash_signup" />
+    <include layout="@layout/layout_splash_signup"/>
 
 </LinearLayout>
