--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="30px"
         android:layout_marginRight="30px"
-        android:layout_marginTop="40px"
+        android:layout_marginTop="54px"
         android:orientation="vertical"
         android:visibility="visible">
 
@@ -34,7 +34,7 @@
 
 
             <AutoCompleteTextView
-                android:id="@+id/emailEt"
+                android:id="@+id/phoneNoOPTEt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="2px"
@@ -42,8 +42,9 @@
                 android:layout_marginRight="2px"
                 android:layout_marginTop="2px"
                 android:background="@drawable/background_white"
-                android:hint="@string/phone_no"
-                android:inputType="textEmailAddress"
+                android:hint="@string/phone_number"
+                android:inputType="number"
+                android:maxLength="13"
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textSize="34px"/>
@@ -52,7 +53,7 @@
 
 
         <Button
-            android:id="@+id/buttonLogin"
+            android:id="@+id/btnGenerateOtp"
             android:layout_width="470px"
             android:layout_height="96px"
             android:layout_marginTop="32px"
@@ -61,6 +62,16 @@
             android:background="@drawable/button_theme_alpha_white_stroke_selector"
             android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"/>
+
+        <TextView
+            android:id="@+id/textViewLoginRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/register_text"
+            android:layout_marginTop="32px"
+            android:textSize="26px"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/white"/>
 
 
     </LinearLayout>
